<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/LightThemeApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".menu.addMac.addNumbers.addNumbers2Activity">

        <TextView
            android:id="@+id/tv_indicator_mac2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/title_add_numbers2"
            android:textSize="18sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_add_mac2"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/address_mac" />

            <Button
                android:id="@+id/btn_scan_mac2"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/btn_scanner_mac" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_sample2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_next2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="60dp"
            android:layout_margin="8dp"
            android:text="@string/btn_save_and_continue" />

    </LinearLayout>

</ScrollView>